<resources>
    <string name="app_name">Jisho</string>
    <string name="search">Search jisho.org</string>
    <string name="sbprompt">Enter romaji, kana, or kanji</string>
    <string name="en">To translate E -> J, surround with \" \"</string>
    <string name="developers">Developed by Abhimanyu Singhal and Tim Toombs</string>
    <string name="devYear">2018</string>
    <string name="JishoLogo">the logo of Jisho.org.</string>
    <string name="plsenter">Please enter a query</string>
    <string name="about1">Developed with love by Abhimanyu Singhal and Tim Toombs, 2018</string>
    <string name="credits">Made using the Jisho.org API and Jim Breen\'s RADKFILE and KANJIDIC2</string>
    <string name="bugreport">To report bugs or other concerns, send an email to phikid0@gmail.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
