<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="c.example.jisho.SearchActivity">

    <Button
        android:id="@+id/searchButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="24dp"
        android:hapticFeedbackEnabled="false"
        android:onClick="search"
        android:text="@string/search"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColorLink="@android:color/background_dark"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchField"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/searchField"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:ems="10"
        android:hint="@string/sbprompt"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quoteMarker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/en"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="297dp"
        android:layout_height="140dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/searchField"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/jishologo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="Developed by Abhimanyu Singhal and Tim Toombs" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="2018" />

</android.support.constraint.ConstraintLayout>
